# UavPathOptimization

./: .gitignore  CMakeLists.txt  README.md  file.h  main.cpp  plot_mds.py  uav_path.txt
src/cpp/: CPlexManager.h  UavPathOptimizationLogic.cpp  UavPathOptimizationLogic.h  file.h  main.cpp
src/cpp/parser/: CoordsParser.h  DistancesParser.h  IDataParser.h
src/py/: plot_mds.py
test-data/: demandPointsInput.txt  realTest.csv  realTest1.csv
